--- a/products/templates/products/list_product.html
+++ b/products/templates/products/list_product.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
 
     <h1 class="text-3xl font-bold underline">
         Lista de productos
     </h1>
-    <div class="grid grid-cols-4 gap-4">
+    <div class="grid grid-cols-4 gap-4 mt-10">
         
         {% for product in products %}
 
@@ -31,15 +32,15 @@
             </svg>
             </button>
             {% if product.photo %}
-            <img
-            src="{{product.photo.url}}"
-            alt="Cafe {{product.name}}"
-            class="h-64 w-64 object-cover transition duration-500 group-hover:scale-105 sm:h-72"
-            />
+                <img
+                src="{{product.photo.url}}"
+                alt="Cafe {{product.name}}"
+                class="h-64 w-64 object-cover transition duration-500 group-hover:scale-105 sm:h-72"
+                />
             {% endif %}
         
             <div class="relative border border-gray-100 bg-white p-6">
-            <span class="whitespace-nowrap bg-yellow-400 px-3 py-1.5 text-xs font-medium"> New </span>
+            <span class="whitespace-nowrap bg-yellow-400 px-3 py-1.5 text-xs font-medium"> Comprar </span>
         
             <h3 class="mt-4 text-lg font-medium text-gray-900">{{product.name}}</h3>
         
