--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    Hola,
+    {% if user.is_authenticated %}
+        {{user.username}}
+
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+
+    {% endif %}
     <div class="container mx-auto px-4">
         {% block content %}
         
