--- a/products/templates/products/list_product.html
+++ b/products/templates/products/list_product.html
@@ -46,15 +46,17 @@
         
             <p class="mt-1.5 text-sm text-gray-700">{{product.price}} $</p>
                 
-                {% comment "" %}
-                <form class="mt-4">
+                
+                <form action= {% url "add_product" %} method='post' class="mt-4">
+                    {% csrf_token %}
+                    <input type="hidden" name='product' value={{product.id}}>
                     <button
                     class="block w-full rounded bg-yellow-400 p-4 text-sm font-medium transition hover:scale-105"
                     >
-                    Add to Cart
+                    Agregar producto
                     </button>
                 </form>
-                {% endcomment %}
+                
 
             
             </div>
